--- a/26thSept2024(2).html
+++ b/26thSept2024(2).html
@@ -10,7 +10,7 @@
     <!-- a tag - to link, as fish rod --hook,  ship stop -- hook  -->
     <!-- 
     a tag has two attributes - href = hyper reference -- to where refer it -- give the path to where it should refer 
-     target  - that page should open in the same tab or any other tag
+     target  - that page should open in the same tab or any other tab
      it has 4 values -   _self, _blank  (remaining two we will learn during the time of iframe)
      _self is a default value 
      _blank  - make the current page blank, and open the link to the new tag 
@@ -18,6 +18,6 @@
     <a href="./26thSept2024(1).html" target="_self"><h1>Click Here</h1></a>
 
     <!-- We can put https link as well  -->
-    <a href="https://amritsar.ptu.ac.in/" target="_blank"> Go to Official IKGPTU Website</a>  <!--target="_blank"  It will open in the new tag -->
+    <a href="https://amritsar.ptu.ac.in/" target="_blank"> Go to Official IKGPTU Website</a>  <!--target="_blank"  It will open in the new tab -->
 </body>
 </html>
