4th October 2024 - Done

--- a/1. September Month/23rdSept2024(1).html
+++ b/1. September Month/23rdSept2024(1).html
@@ -9,7 +9,7 @@
     <h1>Welcome to Codingmuggers</h1>  <!--Bolder & Bigger in Size-->
     <!--We have 6 Variants -->
     <!--6 types of heading tags we have  -->
-    <h2>Kiran</h2>  <!--smallen in size-->
+    <h2>Kiran</h2>  <!--smaller in size-->
     <h3>Kiran</h3>
     <h4>Kiran</h4>
     <h5>Kiran</h5>
