--- a/2. October Month/1stOcto2024(3).html
+++ b/2. October Month/1stOcto2024(3).html
@@ -6,6 +6,17 @@
     <title>Assignment - 3 (Restaurant Menu)</title>
 </head>
 <body>
+
+    <!-- 
+
+ Assignment - 3 
+ Restaurant
+ 5 categories - . (unordered list)
+ 5 dish 1,2,3,4,5 --- picutre & text
+ non veg -- a,b,c,d,e (second category)
+ 
+ -->
+
     <h1>Welcome to My Restaurant</h1>
     <ul>
         <li> <h2>Breakfast</h2></li>
