--- a/2. October Month/3rdOcto2024(4).html
+++ b/2. October Month/3rdOcto2024(4).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Again Do the Assignment - 3 (Table)</title>
+    <title>Again Do the Assignment - 3 (Table) (Revision)</title>
 </head>
 <body>
     <!-- Concept -->
