Minor Changes Updated

--- a/2. October Month/4thOcto2024(2).html
+++ b/2. October Month/4thOcto2024(2).html
@@ -32,6 +32,7 @@
 
     <form action="" align="center">
         <h1>Registration Form</h1>
+        
         <label for="">
             Name : <input type="text">
         </label>
@@ -53,11 +54,12 @@
         <br> <br>
 
         <label for="">
-            Telephone Number : <input type="tel" pattern="[0-9]{10}">
+            Telephone Number : <input type="tel" pattern="[0-9]{10}"> <!--Regular Expression-->
         </label>
         <br><br>
 
         <label for="">
+            <!--Radio Buttons-->
             Gender : <label for="male">Male</label> <input type="radio" name="gender" id="male">
                      <label for="female">Female</label> <input type="radio" name="gender" id="female">
                      <label for="others">Others</label> <input type="radio" name="gender" id="female">
