--- a/1. September Month/24thSept2024(1).html
+++ b/1. September Month/24thSept2024(1).html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic Styles in HTML</title>
 </head>
 <body bgcolor="green" text="blue" align="center"  background="../profile.jpg" >
 
