11th October 2024 - Updated

--- a/1. September Month/20thSept2024(2).html
+++ b/1. September Month/20thSept2024(2).html
@@ -40,7 +40,7 @@ HTML
 - These predefined is also called Tags. 
 - By just using tags, we get the different results. What it means is, the tags code has been written by someone, and we just use it. 
 - These tags are of two type - singe tag, double tag.
-- Singe tag - the tag only gets open -   <img/>   it won't get closed.
+- Single tag - the tag only gets open -   <img/>   it won't get closed.
 - Double Tag - the tag that gets open & closed as well.   <h1></h1>
 
 -->
