--- a/1. September Month/25thSept2024(1).html
+++ b/1. September Month/25thSept2024(1).html
@@ -6,6 +6,10 @@
     <title>Character Formatting Tags</title>
 </head>
 <body>
+    <!--
+     Character Formatting Tag 
+    Total - 9 Character Formatting Tag  
+    -->
     <!-- MS Word  - bold, intalic, underline -->
      <p>Kiran is the greatest person ever born on this planet.</p> <br>
      <b>Kiran is the greatest person ever born on this planet.</b> <br>
