--- a/1. September Month/26thSept2024(2).html
+++ b/1. September Month/26thSept2024(2).html
@@ -13,7 +13,7 @@
      target  - that page should open in the same tab or any other tab
      it has 4 values -   _self, _blank  (remaining two we will learn during the time of iframe)
      _self is a default value 
-     _blank  - make the current page blank, and open the link to the new tag 
+     _blank  - make the current page blank, and open the link to the new tab 
      -->
     <a href="./26thSept2024(1).html" target="_self"><h1>Click Here</h1></a>
 
