--- a/2. October Month/1stOcto2024(1).html
+++ b/2. October Month/1stOcto2024(1).html
@@ -107,7 +107,7 @@ dsss
  Assignment - 3 
  Restaurant
  5 categories - . (unordered list)
- 5 dish 1,2,3,4,5 --- picutre & text
+ 5 dish 1,2,3,4,5 --- picutre & text (ordered list)
  non veg -- a,b,c,d,e
  
  -->
