--- a/2. October Month/5thOcto2024(2).html
+++ b/2. October Month/5thOcto2024(2).html
@@ -27,9 +27,9 @@
 
         <label for="">
             Tel : 
-            <select name="" id="">
-                <option value="">+91</option>
-                <option value="">+71</option>
+            <select>
+                <option>+91</option>
+                <option>+71</option>
             </select>
             <input type="tel" pattern="[0-9]{10}">
         </label>
@@ -73,9 +73,9 @@
 
         <label for="">
             City : 
-            <select name="" id="">
-                <option value="">Bengaluru</option>
-                <option value="">Bihar</option>
+            <select>
+                <option>Bengaluru</option>
+                <option>Bihar</option>
             </select>
         </label>
         <br><br>
