--- a/2. October Month/7thOcto2024(1).html
+++ b/2. October Month/7thOcto2024(1).html
@@ -46,7 +46,12 @@
 
 
 
-    <h2> <sup style="color: yellow;">______________________</sup><span> &nbsp;&nbsp;&nbsp;    UPCOMING FILMS &nbsp;&nbsp;&nbsp;    </span> <sup style="color: yellow;">______________________</sup></h2>
+    <h2> 
+        <sup style="color: yellow;">______________________</sup>
+        <span> &nbsp;&nbsp;&nbsp;    UPCOMING FILMS &nbsp;&nbsp;&nbsp; </span> 
+        <sup style="color: yellow;">______________________</sup>
+    </h2>
+    
     <br><br> <br><br>
     <section>
         <img src="https://www.paramvah.com/images/films/Mithya/UpcomingMithya.jpg" alt="" width="390px"> &nbsp; &nbsp; &nbsp; 
