--- a/2. October Month/9thOcto2024(1).html
+++ b/2. October Month/9thOcto2024(1).html
@@ -6,8 +6,8 @@
     <title>Basic Properties of CSS</title>
     <style>
       h1 {
-        /* background-color: rgb(250, 250, 250);   */
-        color: black;
+        background-color: rgb(250, 250, 250);  
+        /* color: black; */
       }
       body {
         background-image: url(./1.jpg);
