14th October 2024 - All Done

--- a/2. October Month/10thOcto2024(2).html
+++ b/2. October Month/10thOcto2024(2).html
@@ -19,7 +19,7 @@
         body{
             background-color: red;
             background: radial-gradient(red,yellow,green,pink);
-            background-image: url();
+            background-image: url(); /*double quotes is required, but in VS Code, without this also it works. */
             background-repeat: no-repeat;
             background-size: cover;
             background-position: top;
