15th October 2024 - Done

--- a/2. October Month/15thOcto2024(1).html
+++ b/2. October Month/15thOcto2024(1).html
@@ -13,7 +13,7 @@
     3. Class Selectors (.classname).
     4. Id Selectors (#idname). 
 
-    *,.,# are the operators that are used. 
+    *,.,# are the operators that are used. ..
     
     
     -->
