17th October 2024 - Done

--- a/2. October Month/15thOcto2024(3).html
+++ b/2. October Month/15thOcto2024(3).html
@@ -18,7 +18,7 @@
             background: radial-gradient(red, green, yellow, blue, brown);
         } */
         body{
-            background: radial-gradient(red, green, yellow, blue, brown);
+            background: radial-gradient(red, green, yellow, blue, brown);  /*Put colors in comma seperated*/
         }
         /* button{
             background: radial-gradient(red, green, yellow, blue, brown);
