--- a/2. October Month/2ndOcto2024(2).html
+++ b/2. October Month/2ndOcto2024(2).html
@@ -18,7 +18,7 @@
         <caption>IKGPTU Amritsar</caption>
         <tr>
             <th colspan="3" bgcolor="white">Student Marks</th>
-            <!-- Student marks should come to one row ---- therefore to ahieve that, we need to merge 3 columns  --- based on the content, the size will change -->
+            <!-- Student marks should come to one row ---- therefore to ahieve that, we need to merge 3 columns  ----therefore colspan="3"--- based on the content, the size will change -->
         </tr>
         <tr bgcolor="white">
             <th colspan="2">Details</th>
