19th October 2024 - Done

--- a/2. October Month/16thOcto2024(1).html
+++ b/2. October Month/16thOcto2024(1).html
@@ -8,7 +8,7 @@
     Combinators -- when multiple tags are there -- header img tag, and footer img tag --- but I want to change the header img tag -------- then we need to use combinators.
 
     1. Descendent Combinator.  (we use space) --it will select all the following child for the following generations
-    2. Child Combinator. (We use > symbol) -- it will select the first child only.
+    2. Child Combinator. (We use > symbol) -- it will select the own child only.
     3. Adjacent Sibling Combinator.
     4. General Sibling Combinator.
     5. Group Selector --- easy
