--- a/2. October Month/17thOcto2024(1).html
+++ b/2. October Month/17thOcto2024(1).html
@@ -7,6 +7,8 @@
     <!--
     Pseudo Selecotors -- partially --- we want to select a part of a tag. --- we can do with span as well, but easily with the help of pseduo selector we can do it fast.
 
+    for each pseudo selector we need to use the ::  (double colon)
+
     It is of 5 types -
     1. first-letter. --- we see in newspaper or in wikipedia -- first letter is capital & different color.
     2. first-line
